add plugins for zsh and tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,8 +8,9 @@ bind C-a send-prefix
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
@@ -27,7 +28,7 @@ bind r source-file ~/.tmux.conf \; display "Configuracion desplegada"
 set -g mouse on
 
 # Activar la barra de estado en la parte inferior
-set -g status on
+#set -g status on
 
 # Establecer el tiempo de espera de inactividad antes de que la ventana se marque como "inactiva"
 set -g display-panes-time 800
@@ -36,13 +37,13 @@ set -g display-panes-time 800
 set -g history-limit 10000
 
 # Divisores de ventana verticales más delgados
-set -g window-status-separator ''
+#set -g window-status-separator ''
 
 # Establecer el título de la ventana a nombre de host
-set -g set-titles on
+#set -g set-titles on
 
 # Resaltar la ventana actual
-set-window-option -g window-status-current-style bg=blue
+#set-window-option -g window-status-current-style bg=blue
 
 # Cambiar el color de fondo de la ventana activa
 set -g window-active-style bg=colour234
@@ -62,14 +63,26 @@ unbind %
 # Usar vim en modo copy
 setw -g mode-keys vi
 
-# Configuracion de tema catppuccin
-set -g @catppuccin_icon_window_last "󰖰"
-set -g @catppuccin_icon_window_current "󰖯"
-set -g @catppuccin_icon_window_zoom "󰁌"
-set -g @catppuccin_icon_window_mark "󰃀"
-set -g @catppuccin_icon_window_silent "󰂛"
-set -g @catppuccin_icon_window_activity "󱅫"
-set -g @catppuccin_icon_window_bell "󰂞"
-set -g @catppuccin_window_status_icon_enable "yes"
+#set -g @catppuccin_flavour 'mocha' # latte,frappe, macchiato or mocha
+# Modulos
+# Ejemplo de configuración del tema capuccino
+#set -g status-right "#{pomodoro_status}"
+#set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_number_position "right"
+#set -g @catppuccin_window_middle_separator " | "
+set -g @catppuccin_window_number_position "left"
+#set -g @catppuccin_window_default_fill "none"
+
+#set -g @catppuccin_window_current_fill "all"
+
+set -g @catppuccin_status_modules_right "application session pomodoro_plus"
+set -g @catppuccin_status_left_separator "█"
+set -g @catppuccin_status_right_separator "█"
+
+#set -g @pomodoro_interval_display "[%s/%s]"
+#set -g @catppuccin_status_modules_right "... pomodoro_plus ..."
+
+#set -g status-right "#{pomodoro_status}"
+
 
 
