add true colors setting for xterm-256color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,7 +14,7 @@ set -g @plugin 'olimorris/tmux-pomodoro-plus'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
-
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 # Iniciar ventana y panel con numero 1
 set -g base-index 1
 set -g pane-base-index 1
