change plugins for cpu

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,40 +4,26 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'olimorris/tmux-pomodoro-plus'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
+#Configuracion de terminal y apariencia
 set-option -sa terminal-overrides ',xterm-256color:RGB'
-# Iniciar ventana y panel con numero 1
 set -g base-index 1
 set -g pane-base-index 1
-set-window-option -g pane-base-index 1
+set -g mouse on
+set -g display-panes-time 800
+set -g history-limit 10000
 # set-option -g renumber-windows on
 
-# Recargar configuracion tmux
-bind r source-file ~/.tmux.conf \; display "Configuracion desplegada"
-
-# Habilitar el modo de mouse
-set -g mouse on
-
 # Activar la barra de estado en la parte inferior
-#set -g status on
-
-# Establecer el tiempo de espera de inactividad antes de que la ventana se marque como "inactiva"
-set -g display-panes-time 800
-
-# Aumentar la historia del búfer de copia de seguridad
-set -g history-limit 10000
-
-# Divisores de ventana verticales más delgados
-#set -g window-status-separator ''
+set -g status on
 
 # Establecer el título de la ventana a nombre de host
 #set -g set-titles on
@@ -45,14 +31,19 @@ set -g history-limit 10000
 # Resaltar la ventana actual
 #set-window-option -g window-status-current-style bg=blue
 
-# Cambiar el color de fondo de la ventana activa
 set -g window-active-style bg=colour234
+set -g @catppuccin_window_number_position "left"
+set -g @catppuccin_status_modules_right "cpu application session"
+set -g @catppuccin_status_left_separator "█"
+set -g @catppuccin_status_right_separator "█"
+
 set-environment -g EDITOR 'vim'
 
 # Configuracion yank copiado
 set -g @yank_with_mouse on
 set -g @yank_selection_mouse 'clipboard'
 
+bind r source-file ~/.tmux.conf \; display "Configuracion desplegada"
 
 # Crear paneles
 bind | split-window -h
@@ -60,29 +51,7 @@ bind - split-window -v
 unbind '"'
 unbind %
 
+#source-file ~/.tmux.conf \
 # Usar vim en modo copy
 setw -g mode-keys vi
 
-#set -g @catppuccin_flavour 'mocha' # latte,frappe, macchiato or mocha
-# Modulos
-# Ejemplo de configuración del tema capuccino
-#set -g status-right "#{pomodoro_status}"
-#set -g @catppuccin_window_right_separator "█ "
-set -g @catppuccin_window_number_position "right"
-#set -g @catppuccin_window_middle_separator " | "
-set -g @catppuccin_window_number_position "left"
-#set -g @catppuccin_window_default_fill "none"
-
-#set -g @catppuccin_window_current_fill "all"
-
-set -g @catppuccin_status_modules_right "application session pomodoro_plus"
-set -g @catppuccin_status_left_separator "█"
-set -g @catppuccin_status_right_separator "█"
-
-#set -g @pomodoro_interval_display "[%s/%s]"
-#set -g @catppuccin_status_modules_right "... pomodoro_plus ..."
-
-#set -g status-right "#{pomodoro_status}"
-
-
-source-file ~/.tmux.conf \
