update tmux status bar layout

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,43 +1,53 @@
-
 # Habilitar la tecla de prefijo como Ctrl+a
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
-
 #Configuracion de terminal y apariencia
+set -s default-terminal "tmux-256color"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
+#set -g set-clipboard on
 set -g base-index 1
 set -g pane-base-index 1
 set -g mouse on
 set -g display-panes-time 800
 set -g history-limit 10000
-# set-option -g renumber-windows on
-
-# Activar la barra de estado en la parte inferior
 set -g status on
-
+set -g window-active-style bg=colour234
+set-option -g renumber-windows on
+setw -g window-status-separator ""
+# Activar la barra de estado en la parte inferior
+#set -g visual-activity on
+#set -g activity-action flash
 # Establecer el título de la ventana a nombre de host
 #set -g set-titles on
 
-# Resaltar la ventana actual
-#set-window-option -g window-status-current-style bg=blue
-
-set -g window-active-style bg=colour234
-set -g @catppuccin_window_number_position "left"
-set -g @catppuccin_status_modules_right "cpu application session"
-set -g @catppuccin_status_left_separator "█"
-set -g @catppuccin_status_right_separator "█"
+# Background colors
+bg_black="#[bg=#181825]"
+bg_blue="#[bg=#89b4fa]"
+bg_cyan="#[bg=#89dceb]"
+bg_green="#[bg=#a6e3a1]"
+bg_red="#[bg=#f38ba8]"
+bg_orange="#[bg=#fab387]"
+bg_main="#[bg=#1e1e2e]"
+fg_main="#[bg=#8a8a8a]"
 
 set-environment -g EDITOR 'vim'
+set -g message-style "bg=#89dceb,fg=#313244"
+set -g mode-style "bg=#89dceb,fg=#313244"
+set -g pane-active-border-style "#{?pane_in_mode,fg=#89dceb,#{?synchronize-panes,fg=#f38ba8,fg=green}}"
+#set -g status-left "#{?pane_in_mode,#[fg=#f38ba8]#S ,#[fg=#a6e3a1]#S}#[default]"
+set -g status-left ""
+set -g window-status-format "#[bg=#fab387,fg=#1f1f1f,bold] #I #[default]#{b:pane_current_path}#[default]"
+set -g window-status-current-format "#[bg=#89b4fa,fg=#1f1f1f,bold] #I #W #[default]"
+#set -g status-right "#(ps -aux | awk '{print $3}' | tail -n+2 | awk '{s+=$1} END {print s }') #(free -h | awk '/^Mem:/ {print \"RAM:\" $3 \"/\" $2}') #{?client_prefix,#[bg=#f38ba8],#[bg=#a6e3a1]}#[fg=#313244]  #S "
+estadoxtmp="#[fg=#313244]  #S "
+set -g status-right "#(printf '%4.1f%%' $(top -bn1 | grep -m 1 \"Cpu(s)\" | awk '{print \$2 + \$4}'))% #(free -h | awk '/^Mem:/ {print \"󰾆 \" $3 \"/\" $2}') #{?client_prefix,#[bg=#f38ba8],#[bg=#a6e3a1]}$estadoxtmp"
+
+set -g status-fg colour245
+set -g status-bg black
+set -g status-interval 10
+#set -g status-right-fg colour245  # Gris claro
 
 # Configuracion yank copiado
 set -g @yank_with_mouse on
@@ -50,8 +60,15 @@ bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
-
-#source-file ~/.tmux.conf \
 # Usar vim en modo copy
 setw -g mode-keys vi
+#bind-key -T copy-mode-vi 'y' copy-selection-and-cancel \; run-shell "tmux save-buffer - | xclip -i -selection clipboard" 
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+#set -g @plugin 'catppuccin/tmux'
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
 
