--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,7 +30,8 @@ bg_green="#[bg=#a6e3a1]"
 bg_red="#[bg=#f38ba8]"
 bg_orange="#[bg=#fab387]"
 bg_main="#[bg=#1e1e2e]"
-fg_main="#[bg=#8a8a8a]"
+fg_main="#[fg=#8a8a8a]"
+fg_second="#[fg=#313244]"
 
 set-environment -g EDITOR 'vim'
 set -g message-style "bg=#89dceb,fg=#313244"
@@ -38,11 +39,13 @@ set -g mode-style "bg=#89dceb,fg=#313244"
 set -g pane-active-border-style "#{?pane_in_mode,fg=#89dceb,#{?synchronize-panes,fg=#f38ba8,fg=green}}"
 #set -g status-left "#{?pane_in_mode,#[fg=#f38ba8]#S ,#[fg=#a6e3a1]#S}#[default]"
 set -g status-left ""
-set -g window-status-format "#[bg=#fab387,fg=#1f1f1f,bold] #I #[default]#{b:pane_current_path}#[default]"
-set -g window-status-current-format "#[bg=#89b4fa,fg=#1f1f1f,bold] #I #W #[default]"
-#set -g status-right "#(ps -aux | awk '{print $3}' | tail -n+2 | awk '{s+=$1} END {print s }') #(free -h | awk '/^Mem:/ {print \"RAM:\" $3 \"/\" $2}') #{?client_prefix,#[bg=#f38ba8],#[bg=#a6e3a1]}#[fg=#313244]  #S "
-estadoxtmp="#[fg=#313244]  #S "
-set -g status-right "#(printf '%4.1f%%' $(top -bn1 | grep -m 1 \"Cpu(s)\" | awk '{print \$2 + \$4}'))% #(free -h | awk '/^Mem:/ {print \"󰾆 \" $3 \"/\" $2}') #{?client_prefix,#[bg=#f38ba8],#[bg=#a6e3a1]}$estadoxtmp"
+set -g window-status-format "#[bg=#313244,bold] #I #[default]#{b:pane_current_path}#[default]"
+set -g window-status-current-format "#[bg=#89b4fa,fg=#313244,bold] #I #W #[default]"
+cpu_percentage="#(printf '%4.1f%%' $(top -bn1 | grep -m 1 \"Cpu(s)\" | awk '{print \$2 + \$4}'))%"
+ram_status="#(free -h | awk '/^Mem:/ {print \"󰾆 \" $3 \"/\" $2}')"
+prefix_status="#{?client_prefix,$bg_red,$bg_green}"
+session="#[fg=#313244] #S "
+set -g status-right "$cpu_percentage $ram_status $prefix_status $session"
 
 set -g status-fg colour245
 set -g status-bg black
@@ -55,6 +58,8 @@ set -g @yank_selection_mouse 'clipboard'
 
 bind r source-file ~/.tmux.conf \; display "Configuracion desplegada"
 
+# En tu archivo ~/.tmux.conf
+bind-key M-d split-window -h \; split-window -v -t 2 \; select-pane -t 1
 # Crear paneles
 bind | split-window -h
 bind - split-window -v
