add shortcut to group panels in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,6 +63,7 @@ bind-key M-d split-window -h \; split-window -v -t 2 \; select-pane -t 1
 # Crear paneles
 bind | split-window -h
 bind - split-window -v
+bind a setw synchronize-panes
 unbind '"'
 unbind %
 # Usar vim en modo copy
